Localize label errors